--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,8 +3,10 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Poke</th>
       <th>Is active</th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
@@ -14,8 +16,10 @@
   <tbody>
     <% @questions.each do |question| %>
       <tr>
+        <td><%= question.id %></td>
         <td><%= question.poke %></td>
         <td><%= question.is_active %></td>
+        <td><%= link_to 'SetActive', activequestion_path(question) %></td>
         <td><%= link_to 'Show', question %></td>
         <td><%= link_to 'Edit', edit_question_path(question) %></td>
         <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
