--- a/app/views/voters/_form.html.erb
+++ b/app/views/voters/_form.html.erb
@@ -1,25 +1,20 @@
-<%= form_for(@voter) do |f| %>
-  <% if @voter.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@voter.errors.count, "error") %> prohibited this voter from being saved:</h2>
-
-      <ul>
-      <% @voter.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @voter, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :session_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :session_id, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :logon_time, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :logon_time, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :session_id %><br>
-    <%= f.text_field :session_id %>
-  </div>
-  <div class="field">
-    <%= f.label :logon_time %><br>
-    <%= f.datetime_select :logon_time %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                voters_path, :class => 'btn' %>
   </div>
 <% end %>
