--- a/app/views/voters/show.html.erb
+++ b/app/views/voters/show.html.erb
@@ -1,14 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Voter -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Session:</strong>
-  <%= @voter.session_id %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:session_id) %>:</strong></dt>
+  <dd><%= @voter.session_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:logon_time) %>:</strong></dt>
+  <dd><%= @voter.logon_time %></dd>
+</dl>
 
-<p>
-  <strong>Logon time:</strong>
-  <%= @voter.logon_time %>
-</p>
-
-<%= link_to 'Edit', edit_voter_path(@voter) %> |
-<%= link_to 'Back', voters_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              voters_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_voter_path(@voter), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              voter_path(@voter),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
