--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -13,13 +13,12 @@
 
 <h3>Frage <%= @question.id %>: <%= @question.poke %></h3>
 <%= f.label :answer %><br />
-<!--div class="btn-group btn-group-lg">
 
+<!--div class="btn-group btn-group-lg">
     <%= f.radio_button :answer, true, :checked => false, :class => "btn" %>
     <%= f.label :answer, "Yes"  %>
     <%= f.radio_button :answer, false, :checked => false, :class => "btn" %>
-    <%= f.label :answer, "No" %> 
-
+    <%= f.label :answer, "No" %>
 </div-->
 
 
@@ -28,6 +27,17 @@
   <%= f.radio_button :answer, true, :type => :radio, :value => 'true', :checked => false %>
 </div>
 
+
+<div class="btn-group btn-group-lg" data-toggle="buttons-radio">
+  <%= f.radio_button :answer, "ABC", :id=>"first", :style=>"display:none;" %>
+  <label for="first" class="btn btn-primary btn-lg">First</label>
+
+  <%= f.radio_button :answer, "PQR", :id=>"second", :style=>"display:none;" %>
+  <label for="second" class="btn btn-primary btn-lg">Second</label>
+
+  <%= f.radio_button :answer, "MNO", :id=>"third", :style=>"display:none;" %>
+  <label for="third" class="btn btn-primary btn-lg">Third</label>
+</div>
 
 
   <div class="field">
@@ -38,10 +48,6 @@
   <div class="actions">
     <%= f.submit 'Send' %>
   </div>
-
-
-
-
 
 
 <% end %>  <!--   FORM END -->
