--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
 <h3>Frage <%= @question.id %>: <%= @question.poke %></h3>
-<%= f.label :answer %><br />
+<%= f.label :answer %>
 
 <!--div class="btn-group btn-group-lg">
     <%= f.radio_button :answer, true, :checked => false, :class => "btn" %>
@@ -23,30 +23,31 @@
 
 
 
-<div class="make-switch switch-large">
+<!--div class="make-switch switch-large">
   <%= f.radio_button :answer, true, :type => :radio, :value => 'true', :checked => false %>
-</div>
+</div-->
 
 
 <div class="btn-group btn-group-lg" data-toggle="buttons-radio">
-  <%= f.radio_button :answer, "ABC", :id=>"first", :style=>"display:none;" %>
-  <label for="first" class="btn btn-primary btn-lg">First</label>
+  <%= f.radio_button :answer, "true", :id=>"first", :style=>"display:none;" %>
+  <label for="first" class="btn btn-success btn-large">&nbsp YES</label>
 
-  <%= f.radio_button :answer, "PQR", :id=>"second", :style=>"display:none;" %>
-  <label for="second" class="btn btn-primary btn-lg">Second</label>
+  <%= f.radio_button :answer, "", :id=>"second", :style=>"display:none;" %>
+  <label for="second" class="btn btn-primary btn-large">Not sure</label>
 
-  <%= f.radio_button :answer, "MNO", :id=>"third", :style=>"display:none;" %>
-  <label for="third" class="btn btn-primary btn-lg">Third</label>
+  <%= f.radio_button :answer, "false", :id=>"third", :style=>"display:none;" %>
+  <label for="third" class="btn btn-danger btn-large">&nbsp NO &nbsp</label>
 </div>
 
+<br/><br/>
 
   <div class="field">
-    <%= f.label :remark %><br>
-    <%= f.text_field :remark %>
+    <%= f.label :remark %>
+    <%= f.text_field :remark , :class=>"input-xlarge" %>
   </div>
 
   <div class="actions">
-    <%= f.submit 'Send' %>
+    <%= f.submit 'Send my vote' %>
   </div>
 
 
