--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,7 @@
           </div--><!--/.well -->
         </div><!--/span-->
         <div class="span9">
+          <%= image_tag ('SAKK_Logo_RGB_small.jpg')  %>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
