validation if question answered

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -6,11 +6,14 @@
   =require twitter-bootstrap-static/fontawesome
   */
 
-
-/*
-.btn {
-    background-color: #ecf0f1 !important;
-    xxcolor: #2d525d !important;
+.spacer-large {
+    margin-top: 100px; /* define margin as you see fit */
 }
 
-*/
+.spacer-medium {
+    margin-top: 60px; /* define margin as you see fit */
+}
+
+.spacer-small {
+    margin-top: 20px; /* define margin as you see fit */
+}
