--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,6 @@
-<h1>Pages#show</h1>
-<p>Find me in app/views/pages/show.html.erb</p>
+<!--h1>Pages#show</h1>
+<p>Find me in app/views/pages/show.html.erb</p-->
 
-
-<%= link_to 'Next Question', new_inquiry_path %>
+<div class="spacer-medium">
+	<%= link_to 'Next Question', :root, :class => 'btn btn-large'  %>
+</div>
