--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -11,6 +11,5 @@
 
 <div id="chart2"></div>
 
-<%= link_to 'Edit', edit_question_path(@question) %> |
-<%= link_to 'Back', questions_path %>
-
+<!--%= link_to 'Edit', edit_question_path(@question), :class => 'btn btn-mini'  %-->
+<%= link_to 'Question Overview', questions_path,   :class => 'btn btn-primary'  %>
