--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,33 +1,38 @@
-<h1>Listing questions</h1>
-
-<table>
+<%- model_class = Question -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>ID</th>
-      <th>Poke</th>
-      <th>Is active</th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:poke) %></th>
+      <th><%= model_class.human_attribute_name(:is_active) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @questions.each do |question| %>
       <tr>
-        <td><%= question.id %></td>
+        <td><%= link_to question.id, question_path(question) %></td>
         <td><%= question.poke %></td>
         <td><%= question.is_active %></td>
-        <td><%= link_to 'SetActive', activequestion_path(question) %></td>
-        <td><%= link_to 'Show', question %></td>
-        <td><%= link_to 'Edit', edit_question_path(question) %></td>
-        <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_question_path(question), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      question_path(question),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+          <%= link_to 'Make Active', activequestion_path(question), :class => 'btn btn-mini' %>
+
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Question', new_question_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_question_path,
+            :class => 'btn btn-primary' %>
