--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -6,6 +6,7 @@
   =require twitter-bootstrap-static/fontawesome
   */
 
+
 .spacer-large {
     margin-top: 100px; /* define margin as you see fit */
 }
@@ -17,3 +18,15 @@
 .spacer-small {
     margin-top: 20px; /* define margin as you see fit */
 }
+
+td.bla {
+	color: green;
+	font-weight: bold;
+}
+
+
+/*  this seems not to work 
+.btn-primary {
+  .buttonBackground(@yourColor, @yourColorDarker);
+}
+*/
