--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -2,14 +2,22 @@
 
 <%= high_chart("chart2", @chart2) %>
 
-<p> Current Question ID :  <%= @active_question.id %> </p>
 <p> Total Answers :  <%= @answer_count[:total] %> </p>
 
-<p> True Count :  <%= @answer_count[:t_answers] %> </p>
-<p> False Count :  <%= @answer_count[:f_answers] %> </p>
+<table class="table">
+<tr>
+	<td> 'Yes' votes:   <%= @answer_count[:t_answers] %> </td>
+	<td> 'No' votes :   <%= @answer_count[:f_answers] %> </td>
+	<td> 'Enth' votes : <%= @answer_count[:e_answers] %> </td>
+</tr>
+<tr>
+	<td> Valid votes :  <%= @total_valid %> </td>
+	<td> Einfaches Mehr :  <%= @einfaches_mehr %> </td>
+	<td> Absolutes Mehr :  <%= @absolutes_mehr %> </td>
+</tr>
+</table>
 
-
-<div id="chart2"></div>
+<!--div id="chart2"></div-->
 
 <!--%= link_to 'Edit', edit_question_path(@question), :class => 'btn btn-mini'  %-->
-<%= link_to 'Question Overview', questions_path,   :class => 'btn btn-primary'  %>
+<%= link_to 'Questions Overview', questions_path,   :class => 'btn'  %>
