--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,12 +2,13 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<table class="table table-striped">
+<table class="table">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:poke) %></th>
       <th><%= model_class.human_attribute_name(:is_active) %></th>
+      <th></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
@@ -16,7 +17,9 @@
       <tr>
         <td><%= link_to question.id, question_path(question) %></td>
         <td><%= question.poke %></td>
-        <td><%= question.is_active %></td>
+        <!--the following td contains a conditional formatting-->
+        <td class="<%= 'bla' if question.is_active %>"><%= question.is_active %></td>
+        <td><%= link_to 'Make Active', activequestion_path(question), :class => 'btn btn-mini' %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_question_path(question), :class => 'btn btn-mini' %>
@@ -25,8 +28,6 @@
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
-          <%= link_to 'Make Active', activequestion_path(question), :class => 'btn btn-mini' %>
-
         </td>
       </tr>
     <% end %>
