--- a/app/views/questions/set_active.html.erb
+++ b/app/views/questions/set_active.html.erb
@@ -20,4 +20,5 @@
 </div>
 
 <%= link_to 'Close question and show graph', graphs_path, :class => 'btn'  %>
+<%= link_to 'Questions Overview', questions_path, :class => 'btn'  %>
 
