remarks in graph

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -25,6 +25,60 @@ td.bla {
 }
 
 
+/*
+.btn:focus,
+.btn:active,
+.btn:visited,
+.btn:link,
+.btn:hover {
+  background-color: #555;
+  background: -webkit-linear-gradient(#888, #555);
+  background: linear-gradient(#888, #555);
+}
+*/
+
+
+
+/*
+.btn:hover,
+.btn:active,
+.btn:focus,
+{
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9);
+     -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9);
+          box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9);
+}
+*/
+
+/*
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus,
+.btn-primary:visited
+{
+  background-color: #a7cfdf; background-image: -webkit-gradient(linear, left top, left bottom, from(#a7cfdf), to(#23538a));
+  background-image: -webkit-linear-gradient(top, #a7cfdf, #23538a);
+  background-image: -moz-linear-gradient(top, #a7cfdf, #23538a);
+  background-image: -ms-linear-gradient(top, #a7cfdf, #23538a);
+  background-image: -o-linear-gradient(top, #a7cfdf, #23538a);
+  background-image: linear-gradient(to bottom, #a7cfdf, #23538a);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a7cfdf, endColorstr=#23538a);
+}
+*/
+
+
+/*.btn:hover,
+.btn:focus,
+.btn:active,
+.btn:visited,
+.btn:link,
+.btn {
+  color: #999 !important;
+  background-color: grey !important;
+  border-color: #000 !important;
+}*/
+
+
+
 /*  this seems not to work 
 .btn-primary {
   .buttonBackground(@yourColor, @yourColorDarker);
