--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,12 +13,13 @@
  *
  */
 
+
 $bodycolor: #f5f5f5;
-$textcolor: #666;
+$textcolor: #222;
 
 body {	
-	background-color: $bodycolor !important;
-	color: $textcolor !important;
+	background-color: $bodycolor;
+	color: $textcolor;
 }
 
 h1 {
