--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,11 +1,13 @@
 /*
-  =require twitter-bootstrap-static/bootstrap
+ *=require twitter/bootstrap
+ */
 
-  Use Font Awesome icons (default)
-  To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
-  =require twitter-bootstrap-static/fontawesome
-  */
-
+/*
+@import "twitter/bootstrap";
+@import "twitter/bootstrap/buttons.less";
+@import "twitter/bootstrap/variables.less";
+@import "twitter/bootstrap/mixins.less";
+*/
 
 .spacer-large {
     margin-top: 100px; /* define margin as you see fit */
@@ -19,68 +21,22 @@
     margin-top: 20px; /* define margin as you see fit */
 }
 
+
+
 td.bla {
-	color: green;
+	color: blue;
 	font-weight: bold;
 }
 
 
 /*
-.btn:focus,
-.btn:active,
-.btn:visited,
-.btn:link,
-.btn:hover {
-  background-color: #555;
-  background: -webkit-linear-gradient(#888, #555);
-  background: linear-gradient(#888, #555);
+#error_explanation {
+   .alert();
+   .alert-error();
+   .alert-block();
 }
-*/
 
-
-
-/*
-.btn:hover,
-.btn:active,
-.btn:focus,
-{
-  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9);
-     -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9);
-          box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9);
-}
-*/
-
-/*
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary:focus,
-.btn-primary:visited
-{
-  background-color: #a7cfdf; background-image: -webkit-gradient(linear, left top, left bottom, from(#a7cfdf), to(#23538a));
-  background-image: -webkit-linear-gradient(top, #a7cfdf, #23538a);
-  background-image: -moz-linear-gradient(top, #a7cfdf, #23538a);
-  background-image: -ms-linear-gradient(top, #a7cfdf, #23538a);
-  background-image: -o-linear-gradient(top, #a7cfdf, #23538a);
-  background-image: linear-gradient(to bottom, #a7cfdf, #23538a);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a7cfdf, endColorstr=#23538a);
-}
-*/
-
-
-/*.btn:hover,
-.btn:focus,
-.btn:active,
-.btn:visited,
-.btn:link,
-.btn {
-  color: #999 !important;
-  background-color: grey !important;
-  border-color: #000 !important;
-}*/
-
-
-
-/*  this seems not to work 
-.btn-primary {
-  .buttonBackground(@yourColor, @yourColorDarker);
+.field_with_errors {
+   .control-group.error();
 }
 */
