--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Mini1" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "SAKKvote" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -58,17 +58,17 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span3">
-          <!--div class="well sidebar-nav">
+        <!--div class="span3">
+          <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
               <li><%= link_to "Link1", "/path1"  %></li>
               <li><%= link_to "Link2", "/path2"  %></li>
               <li><%= link_to "Link3", "/path3"  %></li>
             </ul>
-          </div--><!--/.well -->
-        </div><!--/span-->
-        <div class="span9">
+          </div><!--/.well -->
+        </div--><!--/span3-->
+        <div class="span12">
           <div class="row-fluid">
             <%= image_tag ('sakkvote.png')  %>
           </div>
