--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,7 +5,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      <!--th><%= model_class.human_attribute_name(:id) %></th-->
       <th><%= model_class.human_attribute_name(:poke) %></th>
       <th><%= model_class.human_attribute_name(:is_active) %></th>
       <th></th>
@@ -15,8 +15,8 @@
   <tbody>
     <% @questions.each do |question| %>
       <tr>
-        <td><%= link_to question.id, question_path(question) %></td>
-        <td><%= question.poke %></td>
+        <!--td><%= link_to question.id, question_path(question) %></td-->
+        <td><%= link_to question.poke, question_path(question)  %></td>
         <!--the following td contains a conditional formatting-->
         <td class="<%= 'bla' if question.is_active %>"><%= question.is_active %></td>
         <td><%= link_to 'Make Active', activequestion_path(question), :class => 'btn btn-mini' %></td>
