--- a/app/views/questions/set_active.html.erb
+++ b/app/views/questions/set_active.html.erb
@@ -19,6 +19,6 @@
 <p class="text-info">Users now may answer the question displayed on their device.</p>
 </div>
 
-<%= link_to 'Close question and show graph', graphs_path, :class => 'btn'  %>
-<%= link_to 'Questions Overview', questions_path, :class => 'btn'  %>
+<%= link_to 'Close question and show graph', graphs_path, class: 'btn'  %>
+<%= link_to 'Questions Overview', questions_path, class: 'btn'  %>
 
