added red buttons

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -2,12 +2,12 @@
  *=require twitter/bootstrap
  */
 
-/*
-@import "twitter/bootstrap";
+
+//@import "twitter/bootstrap";
 @import "twitter/bootstrap/buttons.less";
 @import "twitter/bootstrap/variables.less";
 @import "twitter/bootstrap/mixins.less";
-*/
+
 
 .spacer-large {
     margin-top: 100px; /* define margin as you see fit */
@@ -22,10 +22,13 @@
 }
 
 
-
 td.bla {
 	color: blue;
 	font-weight: bold;
+}
+
+.btn-primary {
+  .button-variant('red'; red; @btn-primary-border);
 }
 
 
