--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -26,7 +26,7 @@
   <label for="first" class="btn btn-primary btn-large">YES</label>
 
   <%= f.radio_button :answer, "abstention", id: "second",  style: "display:none;" %>
-  <label for="second" class="btn btn-large">Abstent.</label>
+  <label for="second" class="btn btn-primary btn-large">Abstent.</label>
 
   <%= f.radio_button :answer, "no", id: "third", style: "display:none;" %>
   <label for="third" class="btn btn-primary btn-large">NO</label>
